-- Created       : 2014 Nov 14 (Fri) 14:30:45 by Harold Carr.
-- Last Modified : 2014 Dec 10 (Wed) 19:14:46 by Harold Carr.
name:                nfsn-client
version:             0.1.0.0
synopsis:            Client for the nearlyfreespeech.net API.
-- description:         
homepage:            http::/haroldcarr.com/
license:             Apache-2.0
license-file:        LICENSE
author:              Harold Carr
maintainer:          harold.carr@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:  NFSNClient
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson == 0.8.0.2
                       , base >=4.6 && <4.7
                       , bytestring == 0.10.4.1
                       , cryptohash == 0.11.6
                       , http-client == 0.4.2.2
                       , http-conduit == 2.1.4.7
                       , lens >= 4.4 && < 4.5
                       , random == 1.1
                       , text == 1.2.0.0
                       , unix-time == 0.3.4
                       , unordered-containers == 0.2.5.1
                       , wreq == 0.2.0.0
  -- hs-source-dirs:      
  default-language:    Haskell2010